--- a/CSS/index.css
+++ b/CSS/index.css
@@ -135,3 +135,35 @@ hr{
     margin-top: -8%;
 
 }
+
+/* Accomodations page */
+.container{
+}
+.beds{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.beds p{
+    font-size: 7vh;
+    color: white;
+    margin-top: 20%;
+
+}
+.beds p span{
+    color: darksalmon;
+    font-style: italic;
+}
+.beds p span::after{
+    content: "";
+    border: 2px dashed salmon;
+    
+}
+.container img{
+    width: 50%;
+    height: 70vh;
+    object-fit: cover;
+    border-radius: 10px;
+    border: 2px solid white;
+}
